--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^6.5.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
+    "socket.io": "^4.5.3",
     "uuid": "^9.0.0"
   }
 }
